--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* Styles pour les écrans très petits */
+@media (max-width: 320px) {
+  .text-xs-smaller {
+    font-size: 0.7rem;
+  }
+  
+  .p-xs-smaller {
+    padding: 0.5rem;
+  }
+}
