--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -3,3 +3,40 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Style de base pour la barre de défilement */
+::-webkit-scrollbar {
+    width: 12px;
+    /* largeur pour la scrollbar verticale */
+    height: 12px;
+    /* hauteur pour la scrollbar horizontale */
+}
+
+/* Style pour la "piste" de la barre de défilement */
+::-webkit-scrollbar-track {
+    background: rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+}
+
+/* Style pour la barre verticale (en rouge) */
+::-webkit-scrollbar-thumb:vertical {
+    background: yellow;
+    border-radius: 10px;
+}
+
+/* Style pour la barre horizontale (en jaune) */
+::-webkit-scrollbar-thumb:horizontal {
+    background: red;
+    border-radius: 10px;
+}
+
+/* Style au survol */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+* {
+    scrollbar-color:yellow red ;
+    /* Le premier est le "thumb", le second est le "track" */
+    scrollbar-width: thin;
+}
